<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155"
        app:srcCompat="@drawable/dog" />

    <Button
        android:id="@+id/button3"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_marginStart="191dp"
        android:layout_marginLeft="191dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:background="#FF9800"
        android:text="@string/browse"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="116dp"
        android:layout_height="52dp"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:background="#FF9800"
        android:text="@string/submit"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="256dp"
        android:layout_height="32dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:text="@string/upload_your_confirmation_here"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/upload"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="31dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="372dp"
        android:layout_marginRight="372dp"
        android:contentDescription="@string/kembali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_action_back" />

    <ImageView
        android:id="@+id/upload"
        android:layout_width="97dp"
        android:layout_height="94dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="@drawable/upload"
        android:contentDescription="@string/upload"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/ic_action_back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="436dp"
        android:layout_height="63dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:background="#FFA407"
        android:gravity="center"
        android:text="@string/shelter"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="245dp"
        android:layout_height="38dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/upload"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>