<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:text="@string/pet_shelter"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="415dp"
        android:layout_height="65dp"
        android:background="#FFA407"
        android:gravity="center"
        android:text="@string/shelter_header"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="371dp"
        android:layout_marginRight="371dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_action_back"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="362dp"
        android:layout_height="135dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:text="@string/pet_shelter_is_a_building_or_area_that_is_devoted_to_temporary_care_and_protection_of_animals_we_provide_this_facility_to_make_it_easier_for_pet_owners_to_move_around_without_worrying_about_pets"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="77dp"
        android:layout_height="67dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:contentDescription="@str"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/dog" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="27dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/hamburget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:srcCompat="@drawable/ic_action_name" />

    <View
        android:id="@+id/view2"
        android:layout_width="386dp"
        android:layout_height="244dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

</androidx.constraintlayout.widget.ConstraintLayout>